...
            
            Text("Для авторизации в приложении введите логин и пароль")
                .font(.title2)
                .multilineTextAlignment(.center)
                .padding(10)

            TextField("Логин", text: $login)
                .textContentType(.username)
                .focused($loginFieldIsFocused)
                .onSubmit {
                    loginFieldIsFocused = false
                    passwordFieldIsFocused = true
                }
...
                .cornerRadius(10)
                .overlay(
                    RoundedRectangle(cornerRadius: 10)
                        .stroke(Color.teal, lineWidth: 1)
                )

            SecureField("Пароль", text: $password)
                .textContentType(.password)
                .focused($passwordFieldIsFocused)
                .onSubmit {
                    viewModel.auth(login: login, password: password, domain: domain)
                }
                .textInputAutocapitalization(.never)
...
